# reefiki

./: .clinerules  .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  LICENSE  QUICKSTART.md  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  TASKS.md  pyproject.toml
.codex/: hooks.json  instructions.md
.obsidian/: graph.json
adapters/: PROOF_GATES.md  README.md
docs/: AGENT_FLOW_CONFORMANCE.md  COORDINATION_OWNER_REGISTRY.md  DASHBOARD_DEMO.md  GTM_READINESS_PACK.md  INSTALL.md  LEADOPS.md  MANAGED_SYNC_DECISION.md  MEMORY_REFLECTION.md  ODYSSEUS_DOGFOOD.md  OPS_DASHBOARD_UX_AUDIT.md  OPS_DASHBOARD_V2_DESIGN.md  PUBLIC_DEMO.md  RECOVERY.md  TOKEN_ECONOMY.md  WORKTREE_LIFECYCLE.md  mobile-capture.md  obsidian-setup.md
scripts/: mimo_memory_integration.py  public-snapshot.private-projects.txt  push-public.ps1  reefiki.py  staged_scope_hook.py  validate_frontmatter.py
site/: README.md  index.html  script.js  styles.css
tests/: test_agent_flow_e2e.py  test_agent_readiness.py  test_ci_workflow.py  test_install_smoke.py  test_packaging_legal.py  test_public_snapshot_guard.py  test_reefiki_core_adapter_smoke.py  test_reefiki_core_adapters.py  test_reefiki_core_cleanup_worktree.py  test_reefiki_core_code_context.py  test_reefiki_core_cross_project.py  test_reefiki_core_doctor.py  test_reefiki_core_duplicates.py  test_reefiki_core_file_utils.py  test_reefiki_core_git_utils.py  test_reefiki_core_guard_staged.py  test_reefiki_core_harvest_commit.py  test_reefiki_core_health.py  (+45 more)
(+176 files in other folders)
