[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reefiki"
version = "0.1.0"
description = "Multi-project markdown wiki and memory control plane for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "REEFIKI contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest>=8.0"
]

[project.scripts]
reefiki = "scripts.reefiki:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["scripts*"]
namespaces = true
